# 2048-Game

./: README.md  pyproject.toml
src/: 2048_game.py  __init__.py  game.py  ui.py
tests/: test_game_logic.py
